# svmodule

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml
svmodule/: __init__.py  cli.py  moddict.py  parser.py  printer.py  test.py
svmodule/printers/: __init__.py  align.py  clockingblock.py  doctable.py  importlist.py  initlatch.py  initwire.py  instance.py  logic.py  module.py  modulename.py  pandaxml.py  parameters.py  port_range.py  printerbase.py  signals.py  wavedisp.py  yaml.py
tests/: test_moddict.py  test_past_as_clockingblock.py  test_past_as_doctable.py  test_past_as_importlist.py  test_past_as_initlatch.py  test_past_as_initwire.py  test_past_as_instance.py  test_past_as_logic.py  test_past_as_module.py  test_past_as_modulename.py  test_past_as_parameters.py  test_past_as_signals.py  test_past_as_wavedisp.py  test_printers_inputs.py
